--- a/Quantum.School.AngularClient/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/Quantum.School.AngularClient/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <div class="top-row pl-4 navbar navbar-dark">
 	<a class="navbar-brand" [routerLink]="['/']">Quantum School</a>
 	<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
-		[attr.aria-expanded]="isExpanded" (click)="toggle()">
+		[attr.aria-expanded]="!collapseNavMenu" (click)="toggle()">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 </div>
